2012-03-24 Borut Razem <borut.razem AT gmail.com>

	* support/makebin/makebin.c: applied modified patch
	  #3510671 - [makebin / gbz80] add nintendo logo info in ROM header,
	  thanks to Noel Lemouel

2012-03-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/Makefile.in,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/ucgbz80/spec.mk,
	  support/regression/ports/ucr2k/spec.mk,
	  support/regression/ports/ucz180/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/xa51/spec.mk: attempt to fix bug #3477347
	  
2012-03-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.h,
	  src/SDCCcse.c: handle possible pointer aliasing more conservatively
	* src/z80/gen.c (genFunction): reset stack.pushed at function start too

2012-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-941021-1.c:
	  Disable test for gcc older than 5.0.

2012-03-22 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: double underlined keywords,
	  fixed bug #3510011 - Wrong keyword
	* src/sdcc.vcxproj, src/sdcc.vcxproj.filters:
	  added some missing header files

2012-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c (initCSupport, typeFromStr, printTypeChainRaw),
	  src/SDCCopt.c (cnvToFloatCast, cnvToFixed16x16Cast, cnvFromFloatCast, 
	  cnvFromFixed16x16Cast, convilong): ongoing upgrades for long long type

2012-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (transferAopAop): fixed bug 3509707
	* support/regression/tests/gcc-torture-execute-930603-1.c: reenabled

2012-03-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-92*,